@startuml

package mastermind.view.console {
   class KeyboardReader {
       Character apply(Vector<Character> validKeys);
   }

   class ControllerVisitorConsole <<ConcreteVisitor>> {
       void visit (StartController controller) <b> { startConsole.update(controller) }</b>
       void visit (PlayController controller) <b> { playConsole.update(controller) }</b>
       void visit (ResumeController controller) <b> { resumeConsole.update(controller) }</b>
   }

   class StartConsole {
       void update(StartController startController)
   }
   class PlayConsole {
       void update(PlayController playController)
   }
   class ResumeConsole {
       void update(ResumeController resumeController)
   }

   ControllerVisitorConsole *--> StartConsole : startConsole
   ControllerVisitorConsole *--> PlayConsole : playConsole
   ControllerVisitorConsole *-> ResumeConsole : resumeConsole

   PlayConsole --> KeyboardReader
   ResumeConsole --> KeyboardReader
}

package mastermind.controller {
   interface Controller <<Element>>{
      {abstract} void setNextState()
      {abstract} void accept(ControllerVisitor visitor)
   }

   interface StartController <<ConcreteElement>>
   interface PlayController <<ConcreteElement>>
   interface ResumeController <<ConcreteElement>>

   Controller <|--- StartController
   Controller <|-- PlayController
   Controller <|-- ResumeController

   class StartController {
      void accept(ControllerVisitor visitor) <b>{visitor.visit(this)}</b>
   }

   class PlayController {
      void accept(ControllerVisitor visitor) <b>{visitor.visit(this)}</b>
   }

   class ResumeController {
      void accept(ControllerVisitor visitor) <b>{visitor.visit(this)}</b>
   }

   interface ControllerVisitor <<Visitor>> {
      {abstract} void visit(StartController startController);
      {abstract} void visit(PlayController playController);
      {abstract} void visit(ResumeController resumeController);
   }

   Controller .left. ControllerVisitor
}

ControllerVisitor <|-- ControllerVisitorConsole

@enduml
